change the initialization of DB to happen in the background

--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -6,6 +6,8 @@ info.build.version=@project.version@
 web.client.version=@tritwebsite.version@
 
 logging.level.com.tikal=TRACE
+logging.level.com.tikal.weather.reader.RealTimeReader=WARN
+logging.level.com.tikal.weather.reader.HistoricReader=WARN
 
 server.port=8092
 server.context-path=/
