--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,6 +34,11 @@ pipeline	{
 		            mvn test
 		        '''
 		    }
+		    post {
+        		always {
+		            junit 'target/surefire-reports/*.xml'
+        		}
+    		}
 		}
     }
 }
